# Noise-Classifier-AI

./: .gitignore  README.md  nyc-noise-classifier.ipynb  pyproject.toml  train.py
notebooks/: nyc-noise-classifier.ipynb
src/noise_classifier_ai/: train.py
