[project]
name = "noise-classifier-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nightshade14", email = "satyamchatrola14@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.10.2.post1",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "tensorflow[and-cuda]>=2.18.0",
    "tqdm>=4.67.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "ruff>=0.7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
